force-app/main/default/objects/Cases__c/fields/Verified_by_Sign_MR__c.field-meta.xml
<CustomField>
    <fullName>Verified_by_Sign_MR__c</fullName>
    <formula>IMAGE(&quot;/resource/testsign&quot;, &quot;Sign&quot;, 30, 70)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verified  by Sign.(MR)</label>
    <type>Text</type>
</CustomField>