force-app/main/default/objects/Cases__c/fields/Verified_Results__c.field-meta.xml
<CustomField>
    <fullName>Verified_Results__c</fullName>
    <label>Verified Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>