force-app/main/default/objects/Cases__c/fields/Web_Company__c.field-meta.xml
<CustomField>
    <fullName>Web_Company__c</fullName>
    <label>Web Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>