force-app/main/default/objects/Cases__c/fields/Web_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Name__c</fullName>
    <label>Web Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>