force-app/main/default/objects/Cases__c/listViews/All_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Complaint_Classification__c</columns>
    <columns>Complaint_Date__c</columns>
    <columns>Case_Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>All Closed Cases</label>
</ListView>