force-app/main/default/objects/Cases__c/listViews/All_Open_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Complaint_Classification__c</columns>
    <columns>Complaint_Date__c</columns>
    <columns>Case_Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Open Cases</label>
</ListView>