force-app/main/default/objects/Cases__c/listViews/CasesView.listView-meta.xml
<ListView>
    <fullName>CasesView</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>CasesView</label>
</ListView>